css/style.css
@media (max-width: 768px) {
    .modules-container {
        margin-top: 0 !important;
    }

    header {
        background-image: none !important;
        background-color: #121212;
    }

    .index-main {
        background-repeat: no-repeat;
        background-position: center center;
        background-image: url("../assets/images/ezgif.com-gif-maker.gif");
        height: auto !important;
    }

    .main-card {
        background: linear-gradient(120deg, rgba(26, 26, 26, 0.75) 0%, rgba(35, 35, 35, 0.75) 100%) !important;
        -ms-flex-item-align: stretch !important;
        align-self: stretch !important;

    }

    .module-card-row {
        height: 100%;
    }

    .refer-button {
        width: 100%;
        margin-right: 0px !important;
    }

}


header {
    background-image: url("../assets/images/navbar-stone-bg.png");
    background-size: cover;
    background-repeat: no-repeat;
    padding-bottom: 10px;
}

.index-header-h2 {
    font-family: 'Sansation', sans-serif;
    text-transform: uppercase;
    letter-spacing: 4px;
    font-size: calc(1.325rem + .9vw);
}

h2 {
    font-family: 'Sansation', sans-serif;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 4px;

}

h4 {
    font-family: 'Sansation', sans-serif;
    font-weight: 700;
    letter-spacing: 2px;
}

.bg-dark {
    background: #121212 !important;
}

.border-secondary {
    border-color: #303030 !important;
    padding-bottom: 11px;
}

.navbar-toggler {
    border: none !important;
}

.header-navbar {
    min-height: 75px;
}

.logo-img {
    display: inline-block;
    -webkit-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

.logo-img:hover {
    -webkit-transform: scale(1.075);
    transform: scale(1.075);
}

.nav-item {
    color: #FAFAFA !important;
    font-family: 'Sansation', sans-serif;
    font-size: 16px;
    line-height: 18px;
    font-weight: 300 !important;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    text-align: center;
    letter-spacing: 0.1em;
    text-transform: uppercase;

}

.rws-nav-item {
    -webkit-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

.rws-nav-item:hover {
    -webkit-transform: scale(1.075);
    transform: scale(1.075);
}

.nav-item.nav-separator {
    background: -webkit-gradient(linear, left top, right top, color-stop(32.55%, #3D3D3D), color-stop(33.98%, #000000), color-stop(66.41%, #000000), color-stop(67.45%, #3D3D3D));
    background: linear-gradient(90deg, #3D3D3D 32.55%, #000000 33.98%, #000000 66.41%, #3D3D3D 67.45%);
    width: 3px;

}

.nav-item.new_quote {
    color: black !important;
    font-weight: 900 !important;
}

.index-main {
    /*
    background-image: url("../assets/images/index-forest-bg.png");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    */
    min-height: 580px;
    background-size: cover;
    height: 60vh;
}

#bgvideo1 {
    background-position: top !important;
}

.main-card {
    background: linear-gradient(120deg, rgba(26, 26, 26, 0.9) 0%, rgba(35, 35, 35, 0.9) 100%);

}

.index-main-container-row {
    min-height: 580px;
}

.main-card-inner {
    border: 2px solid #9d3131;
}

#modules {
    background: #121212;
}

.module-card {
    background: linear-gradient(120deg, rgba(26, 26, 26, 0.9) 0%, rgba(35, 35, 35, 0.9) 100%);
}

.module-cta-btn {
    font-size: 14px;
    font-family: 'Sansation', sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
}

.modules-container {
    margin-top: -105px;
}

.services-main {
    background-position: center;
}

.services-container {
    background: rgba(35, 35, 35, 0.5);
    min-height: 480px;
}

.style1 {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center 100%;
    //background-image: url("../assets/images/wolf-eyes.webp");
    opacity: 1;
    min-height: 310px;
}

.univ--footer {
    background-color: #26272b;
    color: #9e9e9e;
    font-size: 15px;
    line-height: 24px;
    padding: 45px 0 20px;
}

.univ--footer--container--row--col2>ul>a>li,
.univ--footer--container--row--col2>ul>a {
    color: #9e9e9e;
}

.univ--footer--container--row--col3>ul>a>li,
.univ--footer--container--row--col3>ul>a {
    color: #9e9e9e;
}

#career_main {
    min-height: 650px;
}

.hover-cursor:hover {
    cursor: pointer;
    opacity: 0.85;
}

.btn-close {
    opacity: 100%;
    color: white !important;
    background-color: #d4d4d46c !important;
}

.cursor-default:hover {
    cursor: default;
}

.ls-1 {
    letter-spacing: 1.5px;
}



.watermark {

    background-size: cover;
    position: relative;
    z-index: 1;
}

.watermark::before {
    content: '';
    background: url('../assets/images/wolf-eyes.webp') no-repeat center center;
    background-size: 80%;
    display: block;
    opacity: .1;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;
}

.univ--footer--container--row--col,
.univ--footer--container--row--col2,
.univ--footer--container--row--col3 {
    position: relative;
}



#mediatabs .nav-item .active {
    background: transparent;
}

#mediatabs {
    border-color: #ffc107;
}

#mediatabs .nav-item .active {
    border-color: #ffc107;
    color: #ffc107 !important;
}

#mediatabs .nav-item .nav-link:hover {
    border-color: #ffc107;
    color: #ffc107 !important;
}

.watermark1 {

    background-size: cover;
    position: relative;
    z-index: 1;
}

.watermark1::before {
    content: '';
    background: url('../assets/images/wolf-eyes.webp') no-repeat center center;
    background-size: cover;
    display: block;
    opacity: .25;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;
}

.collaborator-flex {
    height: 90px;
}

.image-container {
    position: relative;
}

.download-btn {
    position: absolute;
    top: 10px;
    right: 10px;
    display: none;
    background-color: rgba(255, 255, 255, 0.7);
    padding: 5px 10px;
    border-radius: 5px;
    text-decoration: none;
    color: black;
}

/* This styles the image container and positions it relative so that the overlay can be positioned absolutely inside it */
.image-container {
    position: relative;
}

/* This styles the overlay and positions it absolutely to cover the image, and also makes it invisible by default */
.image-container .overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    opacity: 0;
    -webkit-transition: opacity .3s ease;
    transition: opacity .3s ease;
}

/* This styles the 'Watch' button */
.image-container .overlay .watch-btn {
    background: rgba(0, 0, 0, 0.5);
    /* Change this to match your design */
    color: #fff;
    /* Change this to match your design */
    border: none;
}

/* This makes the overlay and 'Watch' button visible when the user hovers over the image */
.image-container:hover .overlay {
    opacity: 1;
}

.iframe-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

.border-offwhite {
    border-color: #7a7a7a !important;
}

.style2 {
    background-image: url("../assets/images/Football_Banner_Image_2023_Season.png");

}

.promo-card:hover {
    background: linear-gradient(120deg, rgba(26, 26, 26, 0.9) 0%, rgba(35, 35, 35, 0.9) 100%)
}

.h4 {
    font-weight: bold !important;
}

span.price {
    float: right;
    color: #ffc107;
}

a {
    text-decoration: none;
}

#privPol {
    color: #ffc107 !important;
}

#shipTo label {
    display: inline-block;
    /* Ensure labels take up full width */
    width: 100px;
    /* Adjust width as needed for label text */
}

#shipTo input {
    display: inline-block;
    /* Allow inputs to be positioned beside labels */
    width: calc(100% - 120px);
    /* Adjust width calculation based on label width */
}

#gridView,
#listView {
    cursor: pointer;
    color: black;
    /* Default color */
    -webkit-transition: color 0.4s;
    transition: color 0.4s;
    /* Smooth transition for color change */
}

#gridView:focus,
#listView:focus {
    color: #ffc107;
    /* Warning color on click */
}

#gridView:hover,
#listView:hover {
    color: #ffc107;
    /* Warning color on hover */
}

.list-view .container {
    width: 100%;
}

#prodBody {
    min-height: 412px;
}

#bodyTitle {
    min-height: 58px;
}

#slideshowParentGridView {
    max-height: 310px;
    min-height: 310px;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

#slideshow1 img {
    max-width: 100%;
    height: auto;
    -o-object-fit: cover;
    object-fit: cover;
    /* or contain, depending on desired fit */
    -o-object-position: center;
    object-position: center;
}




/* Tooltip CSS */
.tooltip-container {
    position: relative;
    display: inline-block;
}

.tooltip-video {
    display: none;
    position: absolute;
    background-color: #333;
    border-radius: 6px;
    padding: 5px;
    z-index: 1;
}

.tooltip-container:hover .tooltip-video {
    display: block;
}

#swiper1, #swipeHome {
    max-height: 250px;
    max-width: 1288px;
}

